src/test/resources/test/coco/valid/S1.struct
package test.coco.valid;

struct S1 {
  Z f1;
  Q f2;
}
