src/test/resources/test/coco/invalid/ModelWithGenerics1.struct
package test.coco.invalid;

struct ModelWithGenerics1 {
  Z f1;
  Q f2;
  foo.bar.Baz<SomeGeneric> f3;
}
